# WordCounter

./: CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp
qml-components/: AppButton.qml  AppButtonPanel.qml  AppHistogram.qml  AppView.qml  main.qml
qml-controllers/: WordCounterController.cpp  WordCounterController.h
utils/: WorkerThread.cpp  WorkerThread.h
